// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-action-btn Renders \`c-action-btn\` with badge. 1`] = `
<body
  data-app="true"
>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        edit
      </i>
    </button>
     
    <span>
      Edit
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        file_copy
      </i>
    </button>
     
    <span>
      Duplicate
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light error--text"
      >
        delete
      </i>
    </button>
     
    <span>
      Delete
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light color--text"
      >
        test_icon
      </i>
    </button>
     
    <span>
      tooltip
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <span
      class="v-badge c-action-btn__badge v-badge--overlap"
    >
      <button
        class="v-btn ma-0 c-action-btn__button"
        icon="icon"
      >
        <i
          aria-hidden="true"
          class="v-icon material-icons theme--light"
        >
          edit
        </i>
      </button>
      <transition-stub
        name="fab-transition"
      >
        <span
          class="v-badge__badge error"
        >
          <div
            bottom="true"
            class="v-tooltip"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light white--text"
            >
              priority_high
            </i>
             
            <span>
              BADGE TOOLTIP
            </span>
          </div>
        </span>
      </transition-stub>
    </span>
     
    <span>
      TOOLTIP
    </span>
  </div>
</body>
`;

exports[`c-action-btn Renders \`c-action-btn\` with custom type correctly. 1`] = `
<body
  data-app="true"
>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        edit
      </i>
    </button>
     
    <span>
      Edit
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        file_copy
      </i>
    </button>
     
    <span>
      Duplicate
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light error--text"
      >
        delete
      </i>
    </button>
     
    <span>
      Delete
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light color--text"
      >
        test_icon
      </i>
    </button>
     
    <span>
      tooltip
    </span>
  </div>
</body>
`;

exports[`c-action-btn Renders \`c-action-btn\` with default delete type correctly. 1`] = `
<body
  data-app="true"
>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        edit
      </i>
    </button>
     
    <span>
      Edit
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        file_copy
      </i>
    </button>
     
    <span>
      Duplicate
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light error--text"
      >
        delete
      </i>
    </button>
     
    <span>
      Delete
    </span>
  </div>
</body>
`;

exports[`c-action-btn Renders \`c-action-btn\` with default duplicate type correctly. 1`] = `
<body
  data-app="true"
>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        edit
      </i>
    </button>
     
    <span>
      Edit
    </span>
  </div>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        file_copy
      </i>
    </button>
     
    <span>
      Duplicate
    </span>
  </div>
</body>
`;

exports[`c-action-btn Renders \`c-action-btn\` with default edit type correctly. 1`] = `
<body
  data-app="true"
>
  <div
    bottom="true"
    class="v-tooltip"
  >
    <button
      class="v-btn mx-1 my-0 c-action-btn__button"
      icon="icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        edit
      </i>
    </button>
     
    <span>
      Edit
    </span>
  </div>
</body>
`;
